--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,5 @@ Elec Power Chongqing/2021/new/各用户用电量表-周-预测/用户1.xlsx
 *.xlsx
 Elec Power Chongqing/2021/old/forecast.png
 linear programming/gurobi/SAA/chance constraint/results.txt
+draw-pictures/joint chance/np.txt
+draw-pictures/joint chance/test.txt
