--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ linear programming/gurobi/SAA/chance constraint/results.txt
 draw-pictures/joint chance/np.txt
 draw-pictures/joint chance/test.txt
 *.lp
+*.sol
