--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ draw-pictures/joint chance/np.txt
 draw-pictures/joint chance/test.txt
 *.lp
 *.sol
+linear programming/gurobi/overdraft-SDDP/tests_single_product_leadtime_testing.csv
